# notify

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  appdesc.yml  compose.yaml  pyproject.toml
src/: cli.py  endpoint.py  endpoints.py  main.py  models.py  schemas.py
src/config/: __init__.py  handlers.py  settings.py
src/providers/: base.py
src/providers/email/: __init__.py  config.py
src/providers/email/services/: smtp.py
src/providers/sms/: __init__.py  config.py  handler.py
src/services/: __init__.py  fcm_client.py
src/shared/: __init__.py  exceptions.py  utils.py
